--- a/src/e_valuate/evaluate/templates/registration/login.html
+++ b/src/e_valuate/evaluate/templates/registration/login.html
@@ -15,6 +15,7 @@
   {% endif %}
 
   <form method="post" action=".">
+    {% csrf_token %}
     <p><label for="id_username">Username:</label>
       {{ form.username }}</p>
     <p><label for="id_password">Password:</label>
