Adding questions now sets question order correctly. Also added csrf_token to some forms.

--- a/src/e_valuate/evaluate/templates/evaluation/addQuestion.html
+++ b/src/e_valuate/evaluate/templates/evaluation/addQuestion.html
@@ -6,7 +6,8 @@
 	Frågor för utvärderingen {{ evaluation.name }}
 {% endblock %}
 {% block content %}
-	<form action="#" method="post">
+	<form action="" method="post">
+	{% csrf_token %}
 		{{ questionForm }}
 		<input type="submit" value="Ok" />
 	</form>
